# Rocket-OS

./: .gitignore  Autonomous_Rocket_AI_OS_Research_Paper.md  Autonomous_Rocket_AI_OS_Research_Paper.tex  CHANGELOG.md  COMPILATION_GUIDE.md  CONTRIBUTING.md  CONTRIBUTION.md  DEMONSTRATION_COMPLETE.md  Dockerfile  FINAL_BUILD_INSTRUCTIONS.md  FINAL_OVERVIEW.md  FINAL_PERSONALIZATION_SUMMARY.md  FINAL_SUMMARY.md  LICENSE  Makefile  PERSONALIZATION_NOTE.md  PUBLICATION_READY_SUMMARY.md  README.md  TASK_COMPLETION_CONFIRMED.md  TASK_COMPLETION_SUMMARY.md  TASK_FINAL_COMPLETION.md  TASK_FULLY_COMPLETED.md  Vagrantfile  demo_rl_interface.py  docker-compose.yml  out.txt  pyproject.toml  references.bib  requirements-lock.txt  requirements.txt  rl_training_example.py  test_mission_smoke.py  test_subsystems_smoke.py
.claude/: settings.local.json
.github/workflows/: ci.yml  test.yml
benchmarks/: __init__.py  bench_anomaly.py  bench_ekf.py  bench_gnc.py  bench_latency.py  bench_simplex.py  gen_diagrams.py
results/: README.md  trajectory.csv
results/anomaly/: detection_results.csv
results/gnc/: EKF_results.csv  gnc_results.csv
results/latency/: timings_monolithic.csv  timings_partitioned.csv
results/simplex/: monte_carlo_results.csv  simplex_log.csv
rocket_ai_os/: __init__.py  __main__.py  config.py  gym_wrapper.py  main.py
rocket_ai_os/comms/: __init__.py  cognitive_radio.py  dtn.py  mesh.py
rocket_ai_os/core/: __init__.py  dds.py  rtos.py  software_bus.py
rocket_ai_os/environment/: __init__.py  alhat.py  debris.py  (+1 more)
scripts/: generate_trajectory.py
(+24 files in other folders)
